# wasm-zip-stream

./: Cargo.toml  README.md  build.cmd
crates/wasm-zip-stream/: Cargo.toml
crates/wasm-zip-stream-manager/: Cargo.toml
crates/wasm-zip-stream-manager/src/: constant.rs  context.rs  handles.rs  js_futures.rs  manager_context.rs  prelude.rs  recover_writer.rs  transform_writer.rs  utils.rs
crates/wasm-zip-stream-manager/src/js_futures/: FileSystemDirectoryEntry_getFile_future_mod.rs  FileSystemDirectoryReader_readEntries_future_mod.rs
crates/wasm-zip-stream-worker/: Cargo.toml
example/: index.html  index.js  wasm_zip_stream.d.ts  wasm_zip_stream.js  wasm_zip_stream_bg.wasm  wasm_zip_stream_bg.wasm.d.ts
src/: appnote63.rs  lib.rs  manager_context.rs  manager_handles.rs  utils.rs  wasm_error.rs
src/js_futures/: FileSystemFileEntry_file_future_mod.rs
src_js/: wzs-promise-helper.js  wzs-worker.js
