[package]
name = "wasm-zip-stream"
version = "0.1.0"
authors = ["April is a Rabbit <16049823+LittleSaya@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies.web-sys]
version = "=0.3.72"
features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlDivElement",
    "HtmlButtonElement",
    "File",
    "DragEvent",
    "DataTransfer",
    "DataTransferItemList",
    "DataTransferItem",
    "FileSystemEntry",
    "FileSystemFileEntry",
    "FileSystemDirectoryEntry",
    "DomException",
    "FileSystemDirectoryReader",
    "FileSystem",
    "PointerEvent",
    "WritableStreamDefaultWriter",
    "FileSystemFlags",
    "ReadableStream",
    "ReadableStreamGetReaderOptions",
    "ReadableStreamReaderMode",
    "ReadableStreamByobReader",
    "Performance"
]

[dependencies]
wasm-bindgen-futures = "=0.4.45"
flate2 = "=1.0.34"
crc32fast = "=1.4.2"
futures = "=0.3.31"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
